Fixed img overflow, tweaked animation letter, attempt to fix redirection issue after contacting me

--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,25 +1,3 @@
-// .logo-container{
-//     z-index: 0;
-//     width: 400px;
-//     height: 600px;
-//     position: absolute;
-//     top: 0;
-//     right: 15;
-//     bottom: 0;
-//     left: auto;
-//     margin: auto;
-//     // opacity: 0;
-
-//     .solid-logo{
-//         position: absolute;
-//         top: auto;
-//         right: auto;
-//         bottom: auto;
-//         left: 0;
-//         margin: auto;
-//     }
-// }
-
 .logo-container{
     
     .solid-logo{
@@ -36,6 +14,7 @@
 
         .solid-logo{
             border-radius: 10px;
+            width: 60%;
         }
     }
 }
