--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -108,9 +108,8 @@
         .logo-container{
             z-index: 1;
             position: relative;
-            width: 200%;
             top: 5px;
-            right: 70%;
+            right: 30%;
         }
     }
 }
